# clarimetis-mono

./: .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  rate_limit.py
backend/app/middleware/: auth.py  subscription.py
backend/app/models/: __init__.py  evaluation_score.py  knowledge_doc.py  message.py  score_snapshot.py  session.py  user.py  user_profile.py
backend/app/routers/: analytics.py  chat.py  clerk_webhooks.py  media.py  sessions.py  stripe_webhooks.py  users.py  voice.py
backend/app/schemas/: analytics.py  chat.py
backend/app/services/: alerting.py  crisis_detection.py  document_ai.py  embeddings.py  evaluation.py  gateway.py  gcp_credentials.py  gemini.py  guardrails.py  llm_utils.py  profile.py  rag.py  sentiment.py  session_ops.py  storage.py  stripe_service.py  utils.py  voice_service.py
backend/migrations/: 001_init.sql  002_user_profiles_sentiment.sql  003_knowledge_docs.sql  004_subscription_tier_constraint.sql  005_add_enterprise_tier.sql  005_storage_quota.sql  006_ego_emotion_control_scores.sql  007_preferred_language.sql  008_self_awareness_motivation_scores.sql  init.sql
backend/scripts/: seed_knowledge.py
backend/tests/: conftest.py  test_analytics.py  test_chat.py  test_clerk_webhooks.py  test_crisis_detection.py  test_gemini.py  test_guardrails.py  test_media_upload.py  test_migrations.py  test_rag.py  test_sessions.py  test_storage_service.py  test_stripe_webhooks.py  test_subscription.py  test_users.py  test_voice.py
(+117 files in other folders)
